--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:onClick="donutClick"
             android:shadowColor="#231C1C"
             android:shadowRadius="2"
-            android:text="Order Donuts" />
+            android:text="@string/order_donuts" />
 
         <Button
             android:id="@+id/coffeeButton"
@@ -41,18 +41,7 @@
             android:onClick="coffeeClick"
             android:shadowColor="#231C1C"
             android:shadowRadius="2"
-            android:text="Order Coffee" />
-
-        <Button
-            android:id="@+id/viewButton"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:background="@drawable/rounded_corner"
-            android:onClick="viewOrderClick"
-            android:shadowColor="#231C1C"
-            android:shadowRadius="2"
-            android:text="View Orders" />
+            android:text="@string/order_coffee" />
 
         <Button
             android:id="@+id/currButton"
@@ -63,7 +52,20 @@
             android:onClick="currentOrderClick"
             android:shadowColor="#231C1C"
             android:shadowRadius="2"
-            android:text="Current Order" />
+            android:text="@string/current_order" />
+
+        <Button
+            android:id="@+id/viewButton"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:background="@drawable/rounded_corner"
+            android:onClick="viewOrderClick"
+            android:shadowColor="#231C1C"
+            android:shadowRadius="2"
+            android:text="@string/view_orders" />
+
+
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
