--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/coffeewallp"
+    android:backgroundTint="#632B2B2B"
+    android:backgroundTintMode="src_over"
     tools:context=".OrdersActivity">
 
     <ListView
         android:id="@+id/orderView"
-        android:layout_width="415dp"
-        android:layout_height="258dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
+        android:layout_width="416dp"
+        android:layout_height="367dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -22,58 +23,52 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="161dp"
         android:layout_marginEnd="162dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="32dp"
         android:onClick="removeOrder"
         android:text="@string/remove_order"
         app:layout_constraintBottom_toTopOf="@+id/orderView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/textView3"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="134dp"
-        android:layout_marginTop="86dp"
-        android:layout_marginBottom="367dp"
-        android:text="@string/total"
-        app:layout_constraintBottom_toTopOf="@+id/orderView"
-        app:layout_constraintStart_toEndOf="@+id/orderNumber"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/storeOrdersTotal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="86dp"
-        android:layout_marginBottom="367dp"
-        android:text="@string/zero_subtotal"
-        app:layout_constraintBottom_toTopOf="@+id/orderView"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Spinner
-        android:id="@+id/orderNumber"
-        android:layout_width="78dp"
-        android:layout_height="18dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="83dp"
-        android:layout_marginBottom="264dp"
-        app:layout_constraintBottom_toTopOf="@+id/orderView"
-        app:layout_constraintStart_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.514" />
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="83dp"
-        android:layout_marginBottom="263dp"
-        android:text="@string/order_label"
-        app:layout_constraintBottom_toTopOf="@+id/orderView"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.57"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8">
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/order_label"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+
+        <Spinner
+            android:id="@+id/orderNumber"
+            android:layout_width="78dp"
+            android:layout_height="18dp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="61dp"
+            android:layout_height="wrap_content"
+            android:text="@string/total"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/storeOrdersTotal"
+            android:layout_width="59dp"
+            android:layout_height="wrap_content"
+            android:text="@string/zero_subtotal"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
