--- a/app/src/main/res/layout/activity_current_order.xml
+++ b/app/src/main/res/layout/activity_current_order.xml
@@ -100,7 +100,7 @@
 
             <TextView
                 android:id="@+id/orderSubTotal"
-                android:layout_width="wrap_content"
+                android:layout_width="93dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/zero_subtotal"
@@ -109,7 +109,7 @@
 
             <TextView
                 android:id="@+id/taxValue"
-                android:layout_width="wrap_content"
+                android:layout_width="95dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/zero_subtotal"
@@ -118,7 +118,7 @@
 
             <TextView
                 android:id="@+id/totalValue"
-                android:layout_width="wrap_content"
+                android:layout_width="98dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/zero_subtotal"
